--- a/pages/getRegeo/index.wxml
+++ b/pages/getRegeo/index.wxml
@@ -5,10 +5,7 @@
         longitude="{{longitude}}"
         latitude="{{latitude}}"
         scale="14"
-        markers="{{markers}}"
-        bindmarkertap="markertap"
-        show-location="true"
-        style="width: 100%; height: 100%;"></map>
+        markers="{{markers}}"></map>
 </view>
 <view class="map_text">
     <text class="h1">{{textData.name}}</text>
